test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/1.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:88f7e89bfca5d55e6a2ef77c7ff34525c647ea5ef7f5118202422493c05cd562
size 4560251
